--- a/index.htm
+++ b/index.htm
@@ -277,7 +277,7 @@
                 </div>
             </div>
             <!-- Subscription Package Wrapper -->
-            <div class="grid [grid-template-columns:repeat(auto-fit,minmax(412px,_1fr))] gap-12 mt-10 lg:mt-20">
+            <div class="grid lg:[grid-template-columns:repeat(auto-fit,minmax(412px,_1fr))] gap-12 mt-10 lg:mt-20">
                 <!-- Beginner Package Plan -->
                 <div class="p-5 pt-7 shadow-[0px_0px_8px_2px_rgba(0,0,0,0.7)] hover:shadow-[0px_0px_12px_2px_rgba(0,0,0,0.7)] hover:scale-101 transform-scale duration-500 ease rounded-lg flex flex-col justify-between">
                     <!-- Text Container -->
