Started working on the review section.

--- a/index.htm
+++ b/index.htm
@@ -209,20 +209,20 @@
             <div class="grid lg:grid-cols-[1fr_2fr] gap-20 lg:px-6 xl:px-16">
                 <!-- Image Wrapper -->
                 <div class="order-2 lg:order-1 grid grid-cols-[1fr_1fr] lg:grid-cols-[200px_300px] xl:grid-cols-[200px_350px] gap-5 items-stretch lg:max-h-[350px]">
-                    <span class="inline-block overflow-hidden rounded-lg">
+                    <span class="w-full inline-block overflow-hidden rounded-lg">
                         <img src="./images/coach-2.jpeg" alt="Coach">
                     </span>
 
-                    <span class="inline-block overflow-hidden rounded-lg">
+                    <span class="w-full inline-block overflow-hidden rounded-lg">
                         <img src="./images/coach-1.jpeg" alt="Coach">
                     </span>
                 </div>
 
                 <!-- Text Wrapper-->
                 <div class="order-1 lg:order-2">
-                    <span class="text-[#9E9E9E] text-2xl">Are you looking for a Mentor?</span>
-                    <h1 class="text-[#424242] text-7xl font-black mt-4">Coaches</h1>
-                    <p class="text-[#9E9E9E] text-xl mt-6">Our coaches do more than train — they inspire progress. With personalized strategies and proven expertise, they’ll help you turngoals into achievements.</p>
+                    <span class="text-[#9E9E9E] sm:text-2xl">Are you looking for a Mentor?</span>
+                    <h1 class="text-[#424242] text-5xl sm:text-7xl font-black mt-4">Coaches</h1>
+                    <p class="text-[#9E9E9E] sm:text-xl mt-6">Our coaches do more than train — they inspire progress. With personalized strategies and proven expertise, they’ll help you turngoals into achievements.</p>
                     <button class="bg-[#212121] text-white text-sm text-black px-4 py-2 rounded-sm font-medium cursor-pointer mt-12">Explore More</button>
                 </div>
             </div>
@@ -398,6 +398,51 @@
                     </div>
 
                     <a href="#" class="w-full block py-4 mt-30 bg-[#424242] text-center text-white text-xl font-bold rounded-lg">Choose Plan</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Reviews Section -->
+    <section class="py-10 lg:py-24">
+        <div class="container mx-auto px-5">
+            <!-- Review Wrapper -->
+            <div>
+                <div class="flex flex-col md:flex-row md:items-center md:justify-between">
+                    <div>
+                        <h5 class="text-[#9E9E9E] text-2xl">Reviews</h5>
+                        <h1 class="text-[#212121] text-4xl font-bold uppercase mt-4">your opinions</h1>
+                    </div>
+
+                    <button class="w-fit md:w-auto bg-[#212121] text-white text-sm text-black px-4 py-2 rounded-sm font-medium cursor-pointer mt-12">&#43; Your Opinions</button>
+                </div>
+
+                <div class="mt-12 lg:mt-20">
+                    <!-- User Image Wrapper -->
+                    <div class="space-x-5 space-y-5 text-center lg:text-left">
+                        <span class="w-[100px] h-[100px] sm:w-[160px] sm:h-[160px] rounded-full inline-block overflow-hidden max-lg:-translate-x-10"><img src="./images/user-1.jpeg" alt="Profile Pic"></span>
+                        <span class="w-[80px] h-[80px] sm:w-[120px] sm:h-[120px] rounded-full inline-block overflow-hidden max-lg:-translate-x-10 lg:translate-x-10"><img src="./images/user-2.jpeg" alt="Profile Pic"></span> <br>
+                        <span class="w-[120px] h-[120px] sm:w-[180px] sm:h-[180px] rounded-full inline-block overflow-hidden max-lg:translate-x-10 lg:translate-x-25"><img src="./images/user-3.jpeg" alt="Profile Pic"></span>
+                        <span class="w-[110px] h-[110px] sm:w-[150px] sm:h-[150px] rounded-full inline-block overflow-hidden -translate-y-10 max-lg:translate-x-10 lg:translate-x-25"><img src="./images/user-4.jpeg" alt="Profile Pic"></span>
+                    </div>
+
+                    <!-- Review Text Content -->
+                    <div>
+                        <!-- Review Slide Wrapper -->
+                        <div>
+                            <!-- First Slide -->
+                            <div>
+                                <h3>Kerry Rohan</h3>
+                                <span>&#9733;&#9733;&#9733;&#9733;<span>&#9733;</span></span>
+                            </div>
+                        </div>
+                        <!-- Review Slide Navigation Arrows -->
+                        <div>
+                            <button>&#10094;</button>
+                            <button>&#10095;</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
