Updated the writeups for the membership subscription section

--- a/index.htm
+++ b/index.htm
@@ -287,23 +287,23 @@
                             <h6 class="text-[#757575] text-base font-medium">Beginner Plan</h6>
                             <h1 class="text-[#424242] text-4xl font-black mt-2">$<span id="beginnerAmount">10</span> <span class="text-lg">/ Month</span></h1>
                         </div>
-                        <p class="text-[#9E9E9E] text-sm mt-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, deleniti!</p>
+                        <p class="text-[#9E9E9E] text-sm mt-4">Perfect for those just starting their fitness journey. Build a solid foundation with guided workouts and essential support to keep you consistent.                        </p>
                         <ul class="text-[#757575] mt-8 space-y-3">
                             <li class="flex items-center gap-3">
                                 <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>Access to all basic gym equipment</p>
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>Standard group training sessions</p>
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>1 free fitness consultation</p>
                             </li>
                             <li class="flex items-center gap-3">
                                 <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>Locker room access</p>
                             </li>
                         </ul>
                     </div>
@@ -320,32 +320,31 @@
                             <h6 class=" text-base font-medium">Premium Plan</h6>
                             <h1 class=" text-4xl font-black mt-2">$<span id="regularAmount">15</span> <span class="text-lg">/ Month</span></h1>
                         </div>
-                        <p class="mt-4 text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, deleniti!</p>
+                        <p class="mt-4 text-sm">Ideal for those ready to level up their training. Enjoy more access, more flexibility, and personalized guidance to keep you progressing faster.</p>
                         <ul class="mt-8 space-y-3">
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i class="fa-solid fa-check"></i></span>
+                                <p>Full access to gym and premium zones</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i class="fa-solid fa-check"></i></span>
+                                <p>Unlimited group classes</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i class="fa-solid fa-check"></i></span>
+                                <p>2 personal training sessions monthly</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i class="fa-solid fa-check"></i></span>
+                                <p>Nutrition tips and wellness guidance</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-white text-xs text-[#212121]"><i class="fa-solid fa-check"></i></span>
+                                <p>Priority locker room access</p>
                             </li>
                         </ul>
                     </div>
@@ -362,37 +361,36 @@
                             <h6 class="text-[#757575] text-base font-medium">Premium Plan</h6>
                             <h1 class="text-[#424242] text-4xl font-black mt-2">$<span id="premiumAmount">20</span> <span class="text-lg">/ Month</span></h1>
                         </div>
-                        <p class="text-[#9E9E9E] text-sm mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, deleniti!</p>
+                        <p class="text-[#9E9E9E] text-sm mt-4">The ultimate package for serious fitness enthusiasts. Get full access, unlimited perks, and one-on-one support to maximize your performance.</p>
                         <ul class="text-[#757575] mt-8 space-y-3">
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>24/7 gym and VIP zone access</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>Unlimited group & specialized classes</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>Weekly personal training sessions</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>Personalized fitness & meal plans</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>Access to recovery & wellness services</p>
                             </li>
+
                             <li class="flex items-center gap-3">
-                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i
-                                        class="fa-solid fa-check"></i></span>
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <span class="w-5 h-5 p-2 flex items-center justify-center rounded-full bg-[#757575] text-xs text-white"><i class="fa-solid fa-check"></i></span>
+                                <p>Exclusive member events & perks</p>
                             </li>
                         </ul>
                     </div>
